codeclimate code coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,6 @@ script:
   CODECLIMATE_REPO_TOKEN=3a1b48c656a57cdd02824699a1352f8a0648e9b41f3df18323b8c48bab22b5ce bundle exec rake test
 branches:
   - "master"
+addons:
+  code_climate:
+    repo_token: 3a1b48c656a57cdd02824699a1352f8a0648e9b41f3df18323b8c48bab22b5ce
