--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -203,7 +203,7 @@ Style/HashSyntax:
     1, :b => 2 }.'
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#hash-literals
   Enabled: true
-  EnforcedStyle: ruby19
+  EnforcedStyle: hash_rockets
   SupportedStyles:
   - ruby19
   - hash_rockets
@@ -364,7 +364,7 @@ Style/StringLiterals:
   Description: Checks if uses of quotes match the configured preference.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#consistent-string-literals
   Enabled: true
-  EnforcedStyle: double_quotes
+  EnforcedStyle: single_quotes
   SupportedStyles:
   - single_quotes
   - double_quotes
@@ -604,7 +604,7 @@ Style/SymbolArray:
   Enabled: false
 Style/ExtraSpacing:
   Description: Do not use unnecessary spacing.
-  Enabled: true
+  Enabled: false
 Style/AccessorMethodName:
   Description: Check the naming of accessor methods for get_/set_.
   Enabled: false
