--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -19,7 +19,7 @@ AllCops:
   - "vendor/**/*"
   - "db/schema.rb"
   RunRailsCops: false
-  DisplayCopNames: false
+  DisplayCopNames: true
   StyleGuideCopsOnly: false
 Style/AccessModifierIndentation:
   Description: Check indentation of private/protected visibility modifiers.
@@ -66,7 +66,7 @@ Style/BarePercentLiterals:
   - bare_percent
 Style/BracesAroundHashParameters:
   Description: Enforce braces style around hash parameters.
-  Enabled: true
+  Enabled: false
   EnforcedStyle: no_braces
   SupportedStyles:
   - braces
@@ -90,7 +90,7 @@ Style/ClassAndModuleChildren:
   - compact
 Style/ClassCheck:
   Description: Enforces consistent use of `Object#is_a?` or `Object#kind_of?`.
-  Enabled: true
+  Enabled: false
   EnforcedStyle: is_a?
   SupportedStyles:
   - is_a?
@@ -101,15 +101,12 @@ Style/CollectionMethods:
   Enabled: true
   PreferredMethods:
     collect: map
-    collect!: map!
-    find: detect
     find_all: select
-    reduce: inject
+    inject: reduce
 Style/CommentAnnotation:
-  Description: Checks formatting of special comments (TODO, FIXME, OPTIMIZE, HACK,
-    REVIEW).
+  Description: 'Checks formatting of special comments (TODO, FIXME, OPTIMIZE, HACK, REVIEW).'
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#annotate-keywords
-  Enabled: false
+  Enabled: true
   Keywords:
   - TODO
   - FIXME
@@ -199,8 +196,7 @@ Style/GuardClause:
   Enabled: false
   MinBodyLength: 1
 Style/HashSyntax:
-  Description: 'Prefer Ruby 1.9 hash syntax { a: 1, b: 2 } over 1.8 syntax { :a =>
-    1, :b => 2 }.'
+  Description: 'Prefer Ruby 1.9 hash syntax { a: 1, b: 2 } over 1.8 syntax { :a => 1, :b => 2 }.'
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#hash-literals
   Enabled: true
   EnforcedStyle: hash_rockets
@@ -219,7 +215,7 @@ Style/IndentationWidth:
   Width: 2
 Style/IndentHash:
   Description: Checks the indentation of the first key in a hash literal.
-  Enabled: true
+  Enabled: false
   EnforcedStyle: special_inside_parentheses
   SupportedStyles:
   - special_inside_parentheses
@@ -227,7 +223,7 @@ Style/IndentHash:
 Style/LambdaCall:
   Description: Use lambda.call(...) instead of lambda.(...).
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#proc-call
-  Enabled: false
+  Enabled: true
   EnforcedStyle: call
   SupportedStyles:
   - call
@@ -264,7 +260,7 @@ Style/MethodName:
   - camelCase
 Style/MultilineOperationIndentation:
   Description: Checks indentation of binary operations that span more than one line.
-  Enabled: true
+  Enabled: false
   EnforcedStyle: aligned
   SupportedStyles:
   - aligned
@@ -319,22 +315,22 @@ Style/RaiseArgs:
   - compact
   - exploded
 Style/RedundantReturn:
-  Description: Don't use return where it's not required.
+  Description: "Don't use return where it's not required."
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#no-explicit-return
   Enabled: true
   AllowMultipleReturnValues: false
 Style/RegexpLiteral:
-  Description: Use %r for regular expressions matching more than `MaxSlashes` '/'
+  Description: >
+    Use %r for regular expressions matching more than `MaxSlashes` '/'
     characters. Use %r only for regular expressions matching more than `MaxSlashes`
     '/' character.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#percent-r
   Enabled: false
-  MaxSlashes: 1
 Style/Semicolon:
   Description: Don't use semicolons to terminate expressions.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#no-semicolon
   Enabled: true
-  AllowAsExpressionSeparator: false
+  AllowAsExpressionSeparator: true
 Style/SignalException:
   Description: Checks for proper usage of fail and raise.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#fail-method
@@ -384,7 +380,8 @@ Style/SpaceAroundBlockParameters:
   - space
   - no_space
 Style/SpaceAroundEqualsInParameterDefault:
-  Description: Checks that the equals signs in parameter default assignments have
+  Description: >
+    Checks that the equals signs in parameter default assignments have
     or don't have surrounding space depending on configuration.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#spaces-around-equals
   Enabled: true
@@ -394,16 +391,17 @@ Style/SpaceAroundEqualsInParameterDefault:
   - no_space
 Style/SpaceBeforeBlockBraces:
   Description: Checks that the left block brace has or doesn't have space before it.
-  Enabled: true
+  Enabled: false
   EnforcedStyle: space
   SupportedStyles:
   - space
   - no_space
 Style/SpaceInsideBlockBraces:
-  Description: Checks that block braces have or don't have surrounding space. For
+  Description: >
+    Checks that block braces have or don't have surrounding space. For
     blocks taking parameters, checks that the left brace has or doesn't have trailing
     space.
-  Enabled: true
+  Enabled: false
   EnforcedStyle: space
   SupportedStyles:
   - space
@@ -413,7 +411,7 @@ Style/SpaceInsideBlockBraces:
 Style/SpaceInsideHashLiteralBraces:
   Description: Use spaces inside hash literal braces - or don't.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#spaces-operators
-  Enabled: true
+  Enabled: false
   EnforcedStyle: space
   EnforcedStyleForEmptyBraces: no_space
   SupportedStyles:
@@ -421,7 +419,7 @@ Style/SpaceInsideHashLiteralBraces:
   - no_space
 Style/SymbolProc:
   Description: Use symbols as procs instead of blocks when possible.
-  Enabled: true
+  Enabled: false
   IgnoredMethods:
   - respond_to
 Style/TrailingBlankLines:
@@ -481,29 +479,29 @@ Style/WhileUntilModifier:
 Style/WordArray:
   Description: Use %w or %W for arrays of words.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#percent-w
-  Enabled: false
-  MinSize: 0
+  Enabled: true
+  MinSize: 6
   WordRegex: !ruby/regexp /\A[\p{Word}]+\z/
 Metrics/AbcSize:
   Description: A calculated magnitude based on number of assignments, branches, and
     conditions.
   Enabled: true
-  Max: 15
+  Max: 30
 Metrics/BlockNesting:
   Description: Avoid excessive block nesting
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#three-is-the-number-thou-shalt-count
-  Enabled: false
+  Enabled: true
   Max: 3
 Metrics/ClassLength:
-  Description: Avoid classes longer than 100 lines of code.
-  Enabled: false
+  Description: Avoid classes longer than 200 lines of code.
+  Enabled: true
   CountComments: false
-  Max: 100
+  Max: 200
 Metrics/CyclomaticComplexity:
   Description: A complexity metric that is strongly correlated to the number of test
     cases needed to validate a method.
-  Enabled: false
-  Max: 6
+  Enabled: true
+  Max: 10
 Metrics/LineLength:
   Description: Limit lines to 80 characters.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#80-character-limits
@@ -516,20 +514,20 @@ Metrics/LineLength:
 Metrics/MethodLength:
   Description: Avoid methods longer than 10 lines of code.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#short-methods
-  Enabled: false
+  Enabled: true
   CountComments: false
-  Max: 10
+  Max: 40
 Metrics/ParameterLists:
   Description: Avoid parameter lists longer than three or four parameters.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#too-many-params
-  Enabled: false
-  Max: 5
+  Enabled: true
+  Max: 4
   CountKeywordArgs: true
 Metrics/PerceivedComplexity:
   Description: A complexity metric geared towards measuring complexity for a human
     reader.
-  Enabled: false
-  Max: 7
+  Enabled: true
+  Max: 10
 Lint/AssignmentInCondition:
   Description: Don't use assignment in conditions.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#safe-assignment-in-condition
@@ -569,7 +567,7 @@ Rails/HasAndBelongsToMany:
   Include:
   - app/models/**/*.rb
 Rails/Output:
-  Description: Checks for calls to puts, print, etc.
+  Description: 'Checks for calls to puts, print, etc.'
   Enabled: true
   Include:
   - app/**/*.rb
@@ -577,7 +575,7 @@ Rails/Output:
   - db/**/*.rb
   - lib/**/*.rb
 Rails/ReadWriteAttribute:
-  Description: Checks for read_attribute(:attr) and write_attribute(:attr, val).
+  Description: 'Checks for read_attribute(:attr) and write_attribute(:attr, val).'
   Enabled: true
   Include:
   - app/models/**/*.rb
@@ -639,15 +637,16 @@ Style/BeginBlock:
 Style/BlockComments:
   Description: Do not use block comments.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#no-block-comments
-  Enabled: true
+  Enabled: false
 Style/BlockEndNewline:
   Description: Put end statement of multiline block on its own line.
-  Enabled: true
-Style/Blocks:
-  Description: Avoid using {...} for multi-line blocks (multiline chaining is always
+  Enabled: false
+Style/BlockDelimiters:
+  Description: >
+    Avoid using {...} for multi-line blocks (multiline chaining is always
     ugly). Prefer {...} over do...end for single-line blocks.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#single-line-blocks
-  Enabled: true
+  Enabled: false
 Style/CaseEquality:
   Description: Avoid explicit use of the case equality operator(===).
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#no-case-equality
@@ -674,7 +673,7 @@ Style/ColonMethodCall:
   Enabled: false
 Style/CommentIndentation:
   Description: Indentation of comments.
-  Enabled: true
+  Enabled: false
 Style/ConstantName:
   Description: Constants should use SCREAMING_SNAKE_CASE.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#screaming-snake-case
@@ -839,7 +838,8 @@ Style/SelfAssignment:
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#self-assignment
   Enabled: false
 Style/SingleSpaceBeforeFirstArg:
-  Description: Checks that exactly one space is used between a method name and the
+  Description: >
+    Checks that exactly one space is used between a method name and the
     first argument for method calls without parentheses.
   Enabled: true
 Style/SpaceAfterColon:
@@ -878,7 +878,7 @@ Style/SpaceBeforeSemicolon:
 Style/SpaceAroundOperators:
   Description: Use spaces around operators.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#spaces-operators
-  Enabled: true
+  Enabled: false
 Style/SpaceBeforeModifierKeyword:
   Description: Put a space before the modifier keyword.
   Enabled: true
@@ -921,10 +921,10 @@ Style/UnneededPercentQ:
   Description: Checks for %q/%Q when single quotes or double quotes would do.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#percent-q
   Enabled: true
-Style/UnneededPercentX:
-  Description: Checks for %x when `` would do.
-  StyleGuide: https://github.com/bbatsov/ruby-style-guide#percent-x
-  Enabled: true
+#Style/UnneededPercentX:
+#  Description: Checks for %x when `` would do.
+#  StyleGuide: https://github.com/bbatsov/ruby-style-guide#percent-x
+#  Enabled: true
 Style/VariableInterpolation:
   Description: Don't interpolate global, instance and class variables directly in
     strings.
@@ -942,11 +942,11 @@ Lint/AmbiguousOperator:
   Description: Checks for ambiguous operators in the first argument of a method invocation
     without parentheses.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#parens-as-args
-  Enabled: false
+  Enabled: true
 Lint/AmbiguousRegexpLiteral:
   Description: Checks for ambiguous regexp literals in the first argument of a method
     invocation without parenthesis.
-  Enabled: false
+  Enabled: true
 Lint/BlockAlignment:
   Description: Align block ends correctly.
   Enabled: true
@@ -954,7 +954,7 @@ Lint/ConditionPosition:
   Description: Checks for condition placed in a confusing position relative to the
     keyword.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#same-line-condition
-  Enabled: false
+  Enabled: true
 Lint/Debugger:
   Description: Check for debugger calls.
   Enabled: true
@@ -966,7 +966,7 @@ Lint/DuplicateMethods:
   Enabled: true
 Lint/ElseLayout:
   Description: Check for odd code arrangement in an else block.
-  Enabled: false
+  Enabled: true
 Lint/EmptyEnsure:
   Description: Checks for empty ensure block.
   Enabled: true
@@ -986,29 +986,29 @@ Lint/Eval:
 Lint/HandleExceptions:
   Description: Don't suppress exception.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#dont-hide-exceptions
-  Enabled: false
+  Enabled: true
 Lint/InvalidCharacterLiteral:
   Description: Checks for invalid character literals with a non-escaped whitespace
     character.
-  Enabled: false
+  Enabled: true
 Lint/LiteralInCondition:
   Description: Checks of literals used in conditions.
-  Enabled: false
+  Enabled: true
 Lint/LiteralInInterpolation:
   Description: Checks for literals used in interpolation.
-  Enabled: false
+  Enabled: true
 Lint/Loop:
   Description: Use Kernel#loop with break rather than begin/end/until or begin/end/while
     for post-loop tests.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#loop-with-break
-  Enabled: false
+  Enabled: true
 Lint/ParenthesesAsGroupedExpression:
   Description: Checks for method calls with a space before the opening parenthesis.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#parens-no-spaces
-  Enabled: false
+  Enabled: true
 Lint/RequireParentheses:
   Description: Use parentheses in the method call to avoid confusion about precedence.
-  Enabled: false
+  Enabled: true
 Lint/RescueException:
   Description: Avoid rescuing the Exception class.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#no-blind-rescues
@@ -1027,7 +1027,7 @@ Lint/StringConversionInInterpolation:
   Enabled: true
 Lint/UnderscorePrefixedVariableName:
   Description: Do not use prefix `_` for a variable that is used.
-  Enabled: false
+  Enabled: true
 Lint/UnusedBlockArgument:
   Description: Checks for unused block arguments.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#underscore-unused-vars
@@ -1057,7 +1057,7 @@ Lint/UselessSetterCall:
   Enabled: true
 Lint/Void:
   Description: Possible use of operator/literal/variable in void context.
-  Enabled: false
+  Enabled: true
 Rails/Delegate:
   Description: Prefer delegate method for delegations.
   Enabled: false
